fix: gap between elements in chips

--- a/apps/client/src/app/pages/profile/profile.component.css
+++ b/apps/client/src/app/pages/profile/profile.component.css
@@ -96,7 +96,7 @@ section {
 	background-color: #e7e1db;
 	padding: .5rem .9375rem;
 	border-radius: 1rem;
-	gap: .125rem;
+	gap: 0.2rem;
 }
 
 .chip-container p {
